# fastapi-backend

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: greetings.yml
app/: auth.py  create_tables.py  database.py  llm.py  mail.py  models.py  schemas.py
app/data/: stock_BATMMAAN.json  stock_index.json
app/routers/: auth_google.py  auth_register.py  email_update.py  news.py  stock_routes.py  tickers.py  users.py
