[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "fastapi>=0.115.12",
    "fastapi-mail>=1.1.1",
    "fastapi-utilities>=0.3.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
dev = [
  "factory-boy",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
